# diffusion-solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c  matrix.c  matrix.h  number.h  performance-counter.c  performance-counter.h  problem.c  problem.h  solver.c  solver.h  test.txt  xdmf-generator.c  xdmf-generator.h
examples/: test.txt  test100.txt  test200.txt  test400.txt
